# glitter

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.travis/: .gitignore  build_docs.sh  deploy_key.enc  deploy_key.pub
docs/: search-index.js
docs/glitter/: attrib_pointers.m.html  impl_vertex_data.m.html  index.html  macro.attrib_pointers!.html  macro.attrib_pointers.html  macro.impl_vertex_data!.html  macro.impl_vertex_data.html  macro.offset_of!.html  macro.offset_of.html  sidebar-items.js
docs/glitter/buffer/: BufferBindingTarget.t.html  BufferDataUsage.t.html  constant.ARRAY_BUFFER.html  constant.DYNAMIC_DRAW.html  constant.ELEMENT_ARRAY_BUFFER.html  constant.STATIC_DRAW.html  constant.STREAM_DRAW.html  enum.BufferBindingTarget.html  enum.BufferDataUsage.html  index.html  sidebar-items.js  struct.Buffer.html
docs/glitter/context/: AContext.t.html  ContextOf.t.html  index.html  (+6 more)
examples/: LICENSE-MIT  circle-texture.rs  hello-triangle.rs
src/: buffer.rs  context.rs  framebuffer.rs  image_data.rs  index_data.rs  lib.rs  macros.rs  program.rs  ref_into.rs  renderbuffer.rs  shader.rs  texture.rs  texture_units.rs  to_ref.rs  types.rs  uniform_data.rs  vertex_buffer.rs  vertex_data.rs
src/cgmath_features/: cgmath_uniform_data.rs  cgmath_vertex_data.rs  mod.rs
src/context/: buffer_context.rs  framebuffer_context.rs  mod.rs  program_context.rs  renderbuffer_context.rs  texture_context.rs  texture_units.rs
src/image_features/: image_conversions.rs  mod.rs
src/nalgebra_features/: mod.rs  nalgebra_uniform_data.rs  nalgebra_vertex_data.rs
(+4704 files in other folders)
