[package]
name = "glitter"
version = "0.1.0"
authors = ["Kyle Lacy <kylewlacy@me.com>"]

[features]
default = ["cgmath", "image"]

[dependencies]
bitflags = "0.5.0"
gl = "0.5.2"

[dependencies.cgmath]
version = "^0.7.0"
optional = true

[dependencies.image]
version = "^0.7.0"
optional = true

[dev-dependencies]
sdl2 = "0.13.0"
