[package]
name = "glitter"
version = "0.1.0"
authors = ["Kyle Lacy <kylewlacy@me.com>"]

[features]
default = ["cgmath", "image"]

[dependencies]
bitflags = "0.3.2"
gl = "0.0.12"

[dependencies.cgmath]
version = "^0.3.1"
optional = true

[dependencies.image]
version = "^0.3.14"
optional = true

[dev-dependencies]
sdl2 = "0.13.0"
