[package]
name = "glitter"
version = "0.1.2"
authors = ["Kyle Lacy <kylewlacy@me.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/kylewlacy/glitter"
documentation = "https://kylewlacy.github.io/glitter/docs/glitter/index.html"
description = "A safe, low-level, zero-cost OpenGL wrapper library."
keywords = ["opengl", "gl", "graphics", "gamedev"]
exclude = [".travis/**/*"]

[features]
default = ["cgmath", "image"]

[dependencies]
bitflags = "0.5.0"
gl = "0.5.2"

[dependencies.cgmath]
version = "0.11.0"
optional = true

[dependencies.image]
version = "0.10.3"
optional = true

[dependencies.nalgebra]
version = "0.10.0"
optional = true

[dev-dependencies]
sdl2 = "0.13.0"
